--- a/static/sass/variables.sass
+++ b/static/sass/variables.sass
@@ -9,8 +9,9 @@ $font-size-base: 16px
 $font-size-menu-item: 22px
 $font-size-title: 24px
 $header-height: 46px
+$media-breakpoint-extra-large: 1180px
 $media-breakpoint-large: 815px
 $media-breakpoint-medium: 814px
 $media-breakpoint-small: 501px
-$media-breakpoint-short: 1239px
+$media-breakpoint-vertical: 1140px
 $transition-duration-short: .3s
